--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+body {
+    background: rgba(0, 74, 104, 0.658);
+}
+
 p {
     text-align: center;
+    background: rgba(0, 74, 104, 0.658)
 }
 
 h1 {
