--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgba(0, 74, 104, 0.658);
+    background-image: "https://www.nvidia.com/content/dam/en-zz/Solutions/geforce/ampere/wallpapers/rtx-3090/3090-wallpaper-Top.png";
 }
 
 p {
