--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body {
-    background-image: url(3090-wallpaper-Top.png) ;
+    
 }
 
 p {
     text-align: center;
+}
+
+.principal {
+    background-image: url(3090-wallpaper-Top.png) ;
 }
 
 h1 {
@@ -21,3 +25,4 @@ strong {
 .beneficios {
       background: #FFFFFF;   
 }
+
