--- a/style.css
+++ b/style.css
@@ -1,22 +1,18 @@
 body {
-    
-}
-
-background {
     background-image: url(3090-wallpaper-Top.png) ;
 }
+
 p {
     text-align: center;
 }
 
-}
 
 h1 {
     text-align: center;
 }
 
 strong {
-    color: rgb(255, 255, 255);
+    color: rgb(164, 193, 212);
 }
 
 .itens {
@@ -24,7 +20,8 @@ strong {
 }
 
 .beneficios {
-      background-image: url(3090-wallpaper-Top.png)
+     text-align: center;
+     font-style: italic
 }
 
 h2 {
