--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@
     
     .beneficios {
     background-color: rgb(255, 255, 255);
-    text-align: center;
     font-style: italic;
     }
+
+    h2 {
+        text-align: center;
+    }
+    
