--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     
     .beneficios {
     background-color: rgb(255, 255, 255);
-    font-style: italic;
+    font-style: oblique;
     }
 
     h2 {
