--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     h2 {
     font-style: oblique;
     }
-    
-    #3090-wallpaper-Top.png {
-        width: 100%;
-    }
+
+    #placavideo{
+    width: 100%;
+   }
