--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
     p  {
     text-align: center;
     }
-    
+     
     h1 {
     text-align: center;
     }
@@ -33,4 +33,8 @@
     #placavideo {
     width: 100%;
     height: 100%;
+   }
+
+   h3 {
+    font-size: larger;
    }
