--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+    body {
+    background-color: rgb(0, 0, 0);
+    }
+    
     p  {
     text-align: center;
     }
@@ -7,7 +11,7 @@
     }
     
     strong {
-    color: rgb(164, 193, 212);
+    color: rgb(255, 255, 255);
     }
     
     .principal {
@@ -21,7 +25,7 @@
     }
     
     .beneficios {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     font-style: oblique;
     font-size: larger;
     }
