--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
     strong {
     color: rgb(255, 255, 255);
     }
+
+    li {
+    color: rgb(255, 255, 255);
+    }
     
     .principal {
     background-image: url('3090-wallpaper-Top.png');
