--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     p  {
     text-align: center;
     }
+
+    h3 {
+    color: rgb(255, 255, 255);
+    }
      
     h1 {
     text-align: center;
