--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     text-align: center;
     }
 
+    img {
+
+    }
+
     h3 {
     color: rgb(255, 255, 255);
     font-size: larger;
@@ -39,4 +43,8 @@
 
     h2 {
     font-style: oblique;
+    }
+
+    header {
+    text-align: center;
     }
