--- a/produtos.css
+++ b/produtos.css
@@ -22,3 +22,11 @@ nav li {
     display: inline;
     margin: 10px;
 }
+
+nav a {
+    text-transform: uppercase;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 20px;
+    text-decoration: none;
+}
